--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -1,4 +1,4 @@
-name: 外構AI自動集客システム
+name: 外構AI自動集客システム + 分析ダッシュボード
 
 on:
   schedule:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch: # 手動実行も可能
 
 jobs:
-  auto-marketing:
+  auto-marketing-with-analytics:
     runs-on: ubuntu-latest
     
     steps:
@@ -22,9 +22,19 @@ jobs:
     - name: 依存関係をインストール
       run: |
         pip install -r requirements.txt
+        pip install pandas numpy matplotlib seaborn
         
     - name: 外構AI自動集客システム実行
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: python main.py
+      
+    - name: 分析ダッシュボード生成
+      run: python dashboard.py
+      
+    - name: ダッシュボードファイルをアップロード
+      uses: actions/upload-artifact@v3
+      with:
+        name: analytics-dashboard
+        path: dashboard.html
