--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -1,4 +1,4 @@
-name: 外構AI自動集客システム + 分析ダッシュボード Ver.2
+name: 外構AI自動集客システム + 分析ダッシュボード Ver.3
 
 on:
   schedule:
@@ -6,20 +6,21 @@ on:
   workflow_dispatch:
 
 jobs:
-  auto-marketing-with-analytics-v2:
+  exterior-ai-marketing-system:  # 完全に新しいジョブ名
     runs-on: ubuntu-latest
     
     steps:
     - name: コードをチェックアウト
-      uses: actions/checkout@v4  # v3 → v4 に更新
+      uses: actions/checkout@v4
       
     - name: Python環境をセットアップ
-      uses: actions/setup-python@v5  # v4 → v5 に更新
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.9'
+        python-version: '3.11'  # 3.9 → 3.11 に更新
         
     - name: 依存関係をインストール
       run: |
+        pip install --upgrade pip
         pip install -r requirements.txt
         
     - name: 外構AI自動集客システム実行
@@ -32,7 +33,8 @@ jobs:
       run: python dashboard.py
       
     - name: ダッシュボードファイルをアップロード
-      uses: actions/upload-artifact@v4  # v3 → v4 に更新
+      uses: actions/upload-artifact@v4
       with:
-        name: analytics-dashboard
+        name: exterior-analytics-dashboard
         path: dashboard.html
+        retention-days: 30
