--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,9 @@ pandas==2.0.3
 numpy==1.24.3
 matplotlib==3.7.2
 seaborn==0.12.2
+google-generativeai==0.3.2
+youtube-dl==2021.12.17
+moviepy==1.0.3
+opencv-python==4.8.1.78
+beautifulsoup4==4.12.2
+selenium==4.15.2
