--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -1,4 +1,4 @@
-name: 外構AI自動集客システム + 分析ダッシュボード Ver.3
+name: AI自動集客システム Ver.5.3
 
 on:
   schedule:
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  exterior-ai-marketing-system:  # 完全に新しいジョブ名
+  auto-marketing-v53:
     runs-on: ubuntu-latest
     
     steps:
@@ -14,9 +14,9 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Python環境をセットアップ
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.11'  # 3.9 → 3.11 に更新
+        python-version: '3.11'
         
     - name: 依存関係をインストール
       run: |
@@ -29,21 +29,18 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: python main.py
       
-    - name: 分析ダッシュボード生成
-      run: python dashboard.py
-      
     - name: ダッシュボードファイルをアップロード
       uses: actions/upload-artifact@v4
       with:
         name: exterior-analytics-dashboard
         path: dashboard.html
         retention-days: 30
-# .github/workflows/automation.yml に追加
-  - name: Ver.5.3 マルチTrendAnalysisEngine実行
-    env:
-      GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
-      YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
-    run: |
-      echo "🚀 Ver.5.3 システム起動"
-      python main.py
-      echo "✅ Ver.5.3 実行完了"
+        
+    - name: Ver.5.3 マルチTrendAnalysisEngine実行
+      env:
+        GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+        YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
+      run: |
+        echo "🚀 Ver.5.3 システム起動"
+        python main.py
+        echo "✅ Ver.5.3 実行完了"
